# mtm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  app.h  child_process.h  clang.ini  config.c  config.def.h  config.h  curses_screen.cpp  curses_screen.h  curses_term.cpp  curses_term.h  fmtm.cpp  global.cpp  input_stream.h  main.cpp  meson.build  minmax.h  mtm.c  mtm.cpp  mtm.h  node.cpp  node.h  pair.c  pair.h  posix_process.cpp  posix_process.h  posix_selector.cpp  posix_selector.h  process.h  rect.h  screen.h  scrn.cpp  scrn.h  selector.cpp  selector.h  term.h  (+15 more)
mtm/: CMakeLists.txt  main.cpp  meson.build
sub/: CMakeLists.txt  app.cpp  app.h  content.h  curses_term.cpp  curses_term.h  curses_window.cpp  curses_window.h  meson.build  node.cpp  node.h  rect.h  scrn.cpp  scrn.h  selector.h  vtcontext.cpp  vtcontext.h  vthandler.cpp  vtparser.cpp
vt/: vtparser.cpp  vtparser.h
vtlog/: CMakeLists.txt  vtlog.cpp
